--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - title: About Me
   url: /about.html
 
-- title: Source
-  url: https://github.com/patdryburgh/hitchens
+- title: Work
+  url: /work.html
 
-- title: Designer
-  url: http://patdryburgh.com
+- title: Blog
+  url: /blog.html
