--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
-- title: About Me
-  url: /about.html
+- title: About
+  url: /about/
 
 - title: Work
-  url: /work.html
+  url: /work/
 
 - title: Blog
-  url: /blog.html
+  url: /blog/
