--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Colin Ganzevoort
 email: contact@colinganzevoort.nl
 description: >- # this means to ignore newlines until "baseurl:"
-  Psychology, Research, & Technology.
+  Psychology, Research, & Technology
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://coliinnn.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
