--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - title: About
-  url: /about/
+  url: /about
 
 - title: Work
-  url: /work/
+  url: /work
 
 - title: Blog
-  url: /blog/
+  url: /blog
