--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main # or master before October 2020
+      - master # or master before October 2020
 
 jobs:
   github-pages:
