Add mastodon to footer

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ icon: /assets/images/icon-512.png
 twitter_username: colinowg
 linkedin_username: colinganzevoort
 github_username:  coliinnn
+mastodon_url: "https://noc.social/@colin"
 hide_credits: true
 hide_search: true
 page_excerpts: true
