--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Colin Ganzevoort — Psychology, Research, & Technology
 homepage_title: Colin Ganzevoort
 homepage_description: Psychology, Research, & Technology
-email: website-dnL2LQ@colinganzevoort.nl
+email: website@ganzevoort.nl
 description: >- # this means to ignore newlines until "baseurl:"
   I am a Research Master student at the University of Groningen (RUG), specialising in Mental Health and Clinical Psychology. Find more details about me and my work on this website.
 baseurl: "" # the subpath of your site, e.g. /blog
